# NeurArr

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test_rename  test_rename.rs  test_tray.rs
.github/workflows/: rust.yml
migrations/: 20260305000000_initial.sql  20260305000001_tracked_shows.sql  20260305000002_episodes.sql  20260305000003_add_year_to_tracked.sql  20260305000004_add_poster_to_items.sql  20260305000005_manual_matches.sql  20260305000006_update_episodes_schema.sql  20260305000007_episodes_unique.sql  20260305000008_quality_profiles.sql  20260305000009_final_boss.sql  20260306000000_episode_backoff.sql  20260306000001_movie_backoff.sql  20260306000002_pending_downloads.sql  20260306000003_smarter_discovery.sql  20260306000004_quality_cutoff.sql  20260306000005_item_resolution.sql  20260306000006_season_packs.sql  20260307000000_recommendation_feedback.sql
src/: main.rs  utils.rs
src/db/: mod.rs
src/integrations/: indexer.rs  mod.rs  plex.rs  subtitles.rs  tmdb.rs  torrent.rs
src/llm/: mod.rs
src/parser/: mod.rs
src/scanner/: mod.rs
src/web/: mod.rs
tests/: functionality_tests.rs  library_coverage_tests.rs  new_logic_tests.rs  plex_integration_tests.rs  smarter_logic_tests.rs
