[package]
name = "neurarr"
version = "0.1.0"
edition = "2024"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"] }

# Web & API
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"

# File System & Utils
notify = "8.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
path-clean = "1.0"
dotenvy = "0.15"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
sysinfo = "0.30"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
