[package]
name = "neurarr"
version = "0.1.0"
edition = "2024"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"] }

# Web & API
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"

# File System & Utils
notify = "8.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
path-clean = "1.0"
dotenvy = "0.15"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
sysinfo = "0.30"
chrono = "0.4"
walkdir = "2.5"
notify-rust = "4.11"
argon2 = "0.5"
axum-extra = { version = "0.10", features = ["cookie"] }
rand = "0.8"
async-stream = "0.3.6"
tray-icon = "0.21.3"
muda = "0.17.1"
tao = "0.34.6"
image = "0.25.9"
open = "5.3.3"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
